--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
     box-sizing: border-box;
 }
 body{
-    // background-image:url("images/image.jpg");
+    background-image:url("images/image.jpg");
     
-    background-color: ;
+    background-color: #000;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -22,7 +22,6 @@ body{
 /*menu button look*/
 .menu-btn {
     position: relative;
-    display: none;
     justify-content: center;
     align-items: center;
     width: 1.5rem;
@@ -31,44 +30,47 @@ body{
     z-index: 1;
 }
 
-nav menu button 
+/*nav menu button*/ 
 .menu-btn{
     position: relative;
+    top:1vh;
+    /*right: 1vw;*/
 }
 
-.menu-btn_lines,
+
+
+.menu-btn__lines,
 .menu-btn__lines::before,
 .menu-btn__lines::after {
     width: 1.5rem;
-    height: .01rem;
+    height: .1rem;
     background-color: #111111;
     transition: all 0.5s ease-in-out;
 }
 .menu-btn__lines::before,
 .menu-btn__lines::after {
-    content: "";
-    position: absolute;
+  content: "";
+  position: absolute;
 }
-.menu-btn__burger::before {
+.menu-btn__lines::before {
     transform: translateY(-0.5rem);
 }
-.menu-btn__burger::after {
+.menu-btn__lines::after {
     transform: translateY(0.5rem);
 }
-/* ANIMATION 
-.menu-btn.open .menu-btn_lines {
-    transform: translateX(2rem);
+/* ANIMATION */
+.menu-btn.open .menu-btn__lines {
     background: transparent;
     box-shadow: none;
   }
-  .menu-btn.open .menu-btn__burger::before {
-    transform: rotate(45deg) translate(-1.5rem,1.5rem);
+  .menu-btn.open .menu-btn__lines::before {
+    transform: rotate(45deg);
   }
-  .menu-btn.open .menu-btn__burger::after {
-    transform: rotate(-45deg) translate(-1.5rem, -1.5rem);
+  .menu-btn.open .menu-btn__lines::after {
+    transform: rotate(-45deg);
 }
 
-*/
+
 
 
 .header__top {
@@ -221,15 +223,6 @@ nav menu button
   transform: rotate(-45deg) translate(-1.5rem, -1.5rem);
   background-color: #ffffff;
 }
-
-/* sections */
-.section {
-  position: relative;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 /* media query for tablet devices */
 @media (max-width: 1023px) {
   .custom-shape-divider svg {
@@ -297,6 +290,7 @@ nav menu button
     transform: translateX(100%);
     width: 100vw;
     height: 100vh;
+    background: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -315,8 +309,14 @@ nav menu button
         background: green;
     }
 
-    .slide {
+    .slidein {
         animation-name: slidein;
+        animation-duration: .5s;
+        animation-fill-mode: forwards;
+    }
+
+    .slideout {
+        animation-name: slideout;
         animation-duration: .5s;
         animation-fill-mode: forwards;
     }
@@ -325,6 +325,13 @@ nav menu button
       from { transform: translateX(100%);} 
       to {
         transform: translateX(0);
+      }
+    }
+
+    @keyframes slideout {
+      from { transform: translateX(0);} 
+      to {
+        transform: translateX(100%);
       }
     }
 }
