--- a/contact/style.css
+++ b/contact/style.css
@@ -62,7 +62,7 @@
 }
 
 .test-img {
-    width: 40vmin;
+    width: 45vmin;
     height: 40vmin;
     object-fit: cover;
     margin: 1vmin;
@@ -71,4 +71,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-top: 2em;
+    max-width: 1100px;
 }
