--- a/web_development/style.css
+++ b/web_development/style.css
@@ -1,69 +1,12 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.container {
-    max-width: 1100px;
-    margin: 0 auto;
-}
-
-
-.header__top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2vmin;
-}
-
-.site-title {
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
-}
-
-.invisible {
-    width: 8vmin;
-    margin: 0 2vmin;
-}
-
-.icons {
-    width: 4vmin;
-    margin: 0 1vmin;
-}
-.topnav{
-    display: flex;
-    justify-content: space-between;
-}
-.topnav a {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
-    float: left;
-    /*color:#ddd;*/
-    color: black;
-    text-align: center;
-    padding: 1px 0px;
-    text-decoration: none;
-    font-size: 17px;
-    /* I'm trying to condense the space my website is in so I can leave some white space on the sides*/
-    margin-left: 20px;
-    margin-right: 20px
-  }
-
-.topnav a:hover {
-    color: black;
-    border-bottom: 1px solid black;
-  }
-  
-.topnav a.active {
-    /*color: black;*/
-    border-bottom: 1px solid black;
+body {
+    background: white;
 }
 
 .test-img {
-    width: 40vmin;
-    height: 40vmin;
+    min-width: 217px;
+    width: 25vmax;
+    min-height: 250px;
+    height: 25vmax;
     object-fit: cover;
     margin: 1vmin;
 }
@@ -71,4 +14,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    max-width: 100vw;
+    /* margin: 0 auto; */
+    margin-top: 2em;
 }
