--- a/contact/style.css
+++ b/contact/style.css
@@ -1,3 +1,18 @@
 body {
     background: white;
 }
+.about {
+    margin-left: 10em;
+    justify-content: center;
+    max-width: 100vw;
+    text-align: left;
+    /* margin: 0 auto; */
+    margin-top: 2em;
+    font-family: 'Poppins', sans-serif;
+}   
+
+.icon{
+    margin-top: 2em;
+    width: 4vmin;
+    margin: 0 1vmin;
+}
