--- a/main-style.css
+++ b/main-style.css
@@ -10,9 +10,9 @@ a{
 }
 
 body{
-    background-image:url("images/image.jpg");
+    /* background-image:url("images/image.jpg"); */
     
-    background-color: #000;
+    background-color: white;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -78,9 +78,9 @@ body{
 }
 
 .site-title {
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
 }
 
 .invisible {
@@ -120,18 +120,21 @@ body{
 
 .sidenav {
     display: none;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
 }
 
   
 
 
 .hero-text {
-    border: 3px solid white;
+    border: 3px solid black;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: black;
     padding: 20px;
     text-align: center;
     font-family: 'Poppins', sans-serif;
@@ -158,11 +161,13 @@ body{
 
   .sidebar-socials {
     position: absolute;
-    bottom: 1em;
+    bottom: 9em;
+
   }
 
   .icons-side {
-    width: 4vmin;
+    height: 6vh;
+    width: 6vh;
     margin: 0 1vmin;
   }
 
@@ -202,7 +207,8 @@ body{
       font-size: 2rem;
   }
   .sidenav li a:hover {
-      background: green;
+    color: black;
+    border-bottom: 1px solid black;
   }
 
   .slidein {
